# tempx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.js  package-lock.json  package.json  uuid.js
.github/workflows/: docker.yml
src/: app_config.rs  deleter.rs  file_database.rs  main.rs  ms.rs  utils.rs
