[package]
name = "tempx"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json", "uuid"] }
rand = "0.8.5"
dashmap = "5.3.4"
ms-converter = "1.4.0"